# SoapSevice

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
deploy/: entry_point.sh  wait_for_postgres.sh
soap_service/: handlers.py  soap.py
soap_service/server/: server.py
soap_service/storage/: db.py  init_db.py
tests/: test_soap_service.py
