[tool.poetry]
name = "soap_service"
version = "0.1.0"
description = ""
authors = ["Igor Pestov pestov.igr@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.13"
spyne = "2.13.2a0"
gunicorn = "^20.0.4"
lxml = "^4.5.0"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
